--- a/runer.html
+++ b/runer.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
-	<title>jQuery+RequireJS Sample Page</title>
-	<script data-main="app" src="libs/require/require.js"></script>
+    <title>jQuery+RequireJS Sample Page</title>
+    <link rel="stylesheet" href="libs/jasmine-2.0.3/jasmine.css">
+    <script type="text/javascript" src="libs/jasmine-2.0.3/jasmine.js"></script>
+    <script type="text/javascript" src="libs/jasmine-2.0.3/jasmine-html.js"></script>
+    <script type="text/javascript" src="libs/jasmine-2.0.3/boot.js"></script>
+    <script data-main="app" src="libs/require/require.js"></script>
 </head>
 <body>
 <h1>jQuery+RequireJS Sample Page</h1>
