Adding first tests to project,  Initial test structure implemented,  tests folders mirroring project folders

--- a/runer.html
+++ b/runer.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <head>
-    <title>jQuery+RequireJS Sample Page</title>
-    <link rel="stylesheet" href="libs/jasmine-2.0.3/jasmine.css">
-    <script type="text/javascript" src="libs/jasmine-2.0.3/jasmine.js"></script>
-    <script type="text/javascript" src="libs/jasmine-2.0.3/jasmine-html.js"></script>
-    <script type="text/javascript" src="libs/jasmine-2.0.3/boot.js"></script>
+    <title>Nesting Project main page</title>
     <script data-main="app" src="libs/require/require.js"></script>
 </head>
 <body>
-<h1>jQuery+RequireJS Sample Page</h1>
-<p>Look at source or inspect the DOM to see how it works.</p>
+<h1>Nesting Project Main Page</h1>
+<p>Not Implemented Exception ;)</p>
 </body>
