Re-style testRunner.html

--- a/TestsProj/tesRunner.html
+++ b/TestsProj/tesRunner.html
@@ -7,6 +7,6 @@
     <script type="text/javascript" src="testLibs/jasmine-2.0.3/boot.js"></script>
     <script data-main="testProjApp" src="../libs/require/require.js"></script>
 </head>
-<body>
-<h1>Nesting Project Tests</h1>
+<body style="margin: 0;">
+<h1 style="background-color: #007069; color: #EEEEEE; margin: 0; padding: 15px; text-align: center;">Nesting Project Tests</h1>
 </body>
