tests for move line functionality has been added, adding jasmine icons to tests runner

--- a/TestsProj/tesRunner.html
+++ b/TestsProj/tesRunner.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>jQuery+RequireJS Sample Page</title>
+	<link rel="icon" href="testLibs/jasmine-2.0.3/jasmine.ico" sizes="16x16"/>
+	<link rel="icon" href="testLibs/jasmine-2.0.3/jasmine_32x32.ico" sizes="32x32"/>
     <link rel="stylesheet" href="testLibs/jasmine-2.0.3/jasmine.css">
     <script type="text/javascript" src="testLibs/jasmine-2.0.3/jasmine.js"></script>
     <script type="text/javascript" src="testLibs/jasmine-2.0.3/jasmine-html.js"></script>
